# Pharmacystore_Project

./: .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  SCRIPTS_ANALYSIS.md  pyproject.toml  requirements.txt  restore_mssql_docker.ps1  restore_mssql_docker.sh  run_all.py
.github/workflows/: ci.yml
scripts/: ablation_study.py  build_holiday_summary.py  classify_atc.py  experiment_scratch.py  feature_preview.py  restore_db.sh  run_all.py  run_pipeline.py  scale_sales.py  sort_by_prescription.py  train_baseline.py  train_model.py
src/pharmacystore/: __init__.py  config.py  logging_config.py  pipeline.py  run_utils.py
src/pharmacystore/db/: client.py
src/pharmacystore/features/: atc.py  build.py  calendar.py
src/pharmacystore/models/: calibration.py  encoding.py  evaluation.py  monitoring.py  splitting.py  train_xgb.py  train_xgb.py.backup  train_xgb_baseline.py  walkforward.py  weighting.py
tests/: test_atc.py  test_build.py  test_calendar.py  test_calibration.py  test_config.py  test_db_client.py  test_evaluation.py  test_pipeline.py  test_run_utils.py  test_splitting.py  test_weighting.py
