[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacystore"
version = "0.1.0"
description = "Pharmacy sales forecasting with XGBoost"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pydantic",
  "pydantic-settings",
  "pyodbc",
  "scikit-learn",
  "xgboost",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
